--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack",
-    "webpack:watch": "webpack --watch"
+    "webpack:watch": "webpack --watch",
+    "test": "mocha-webpack --webpack-config webpack.config-test.js \"test/**/*.test.js\""
   },
   "keywords": [
     "npm-library"
@@ -20,6 +21,10 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
-    "webpack": "^2.2.1"
+    "chai": "^4.2.0",
+    "mocha": "^7.1.2",
+    "mocha-webpack": "^1.1.0",
+    "webpack": "^2.2.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
