--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "webpack": "webpack",
     "webpack:watch": "webpack --watch",
-    "test": "mocha-webpack --webpack-config webpack.config-test.js \"test/**/*.test.js\""
+    "test": "env-cmd -f ./config/.env mocha-webpack --webpack-config webpack.config-test.js \"test/**/*.test.js\""
   },
   "keywords": [
     "npm-library"
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "chai": "^4.2.0",
+    "env-cmd": "^10.1.0",
     "mocha": "^7.1.2",
     "mocha-webpack": "^1.1.0",
     "webpack": "^2.2.1",
